deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hackathon-website-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
